[package]
name = "myrkul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.7"
exitcode = "1.1.2"
rustyline = { version = "14.0.0", features = ["with-file-history"] }
smallvec = "1.13.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }